--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   },
   "homepage": "https://github.com/vander-idme/bodega#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
-    "mongoose": "^5.9.24"
+    "mongoose": "^5.9.24",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
