--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "sistema de administracion para una bodega\r vjauygsdauysd",
   "main": "index.js",
   "scripts": {
-    "start": " node src/index.js"
+    "start": " node src/index.js",
+    "webpack": "webpack --mode development"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,17 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.24",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "nodemon": "^2.0.4",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
