--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": " node src/index.js",
+    "nodemon":" nodemon src/index.js",
     "webpack": "webpack --mode development"
   },
   "repository": {
@@ -19,7 +20,6 @@
   "homepage": "https://github.com/vander-idme/bodega#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.24",
